# 6000-fall-2025

./: .gitignore  2025-modernized-curriculum.md  404.qmd  LICENSE  README.md  _quarto.yml  _variables.yml  about.qmd  find_unused_files.py  github-repository-analysis.md  incremental-curriculum-updates.md  index.ipynb  index.qmd  make_schedule_ics.py  pyproject.toml  r-to-python-migration.md  schedule.qmd  syllabus.qmd
R/: hex_logo.R  schedule.R
content/: 01-content.qmd  02-content.qmd  03-content.qmd  04-content.qmd  05-content.qmd  06-content.qmd  07-content.qmd  08-content.qmd  09-content.qmd  10-content.qmd  11-content.qmd  12-content.qmd  13-content.qmd  14-content.qmd
data/: schedule.csv
docs/: 404.html  about.html  index.html  robots.txt  schedule.html  search.json  sitemap.xml  syllabus.html
files/: schedule.ics
labs/: 01-labs.qmd  02-labs.qmd  03-labs.qmd  04-labs.qmd  07-labs.qmd  11-labs.qmd  _metadata.yml  login-to-saxanet.qmd
project/: 01-project.qmd  04-project.qmd  06-project.qmd  eda.qmd  feedback.qmd  final.qmd  index.qmd  ml.qmd  nlp.qmd  project-on-azure.qmd  project.qmd
resources/: index.qmd
slides/: 01-slides.qmd  02-slides.qmd  03-slides.qmd  04-slides.qmd  05-slides.qmd  06-slides.qmd  06-slides.quarto_ipynb  07-slides.qmd  08-slides.qmd  08-slides.quarto_ipynb  09-slides.qmd  10-slides.qmd  11-slides.qmd  13-slides.qmd  13-slides.quarto_ipynb  14-slides.qmd  custom.scss  module-map-and-reduce.md  module-multiprocessing.md  module-parallel-computing.md  module-parallel.md  week-tbd--slides.qmd
tech-ref/: _login-to-saxanet.qmd  _screenshot-disclaimer.qmd  azure.qmd  terminal-and-ssh.qmd
todo/: README.md  find_unreferenced_images.py  move_unreferenced_images.py  (+1 more)
(+78 files in other folders)
